data/derived/comb/progs/unify/prog2691.ml.out
Characters 45-57:
  let fixpoint (f,b) = wwhile (let xx = f b in (xx, xx = b),b);;
                                               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
